--- a/testprojectlatex.tex
+++ b/testprojectlatex.tex
@@ -82,7 +82,7 @@ in ASME Format for Testing Your Figures}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
 {\it This is the abstract.
-This article illustrates preparation of ASME paper using 
+This article illustrates preparation of ASME paper using and furthermore
 \LaTeX2\raisebox{-.3ex}{$\epsilon$}.
 An abstract for an ASME paper should be less than 150 words and is normally in italics.
 %%% 
